--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
+    <link rel='icon' href="favicon.ico">
     <title>Lucas A. Bonini</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/cover/">
